src/objects/TravelRequest__c.object
<CustomObject>
    <fields>
        <fullName>Approve__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>提交待审批</fullName>
                </value>
                <value>
                    <fullName>审批成功</fullName>
                </value>
                <value>
                    <fullName>审批失败</fullName>
                </value>
                <value>
                    <fullName>已调回</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessChance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>出差申请</relationshipLabel>
        <relationshipName>RI62</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emailzg__c</fullName>
        <label>主管Email地址</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>chance__c</referenceTo>
        <relationshipLabel>出差申请</relationshipLabel>
        <relationshipName>hw1k</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求（个案）</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>出差申请</relationshipLabel>
        <relationshipName>c5Qz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>出差申请</relationshipLabel>
        <relationshipName>ccsqzIHd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>departure__c</fullName>
        <label>出发地</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>departuredate__c</fullName>
        <label>出发时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>destination__c</fullName>
        <label>目的地</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>returntime__c</fullName>
        <label>返回时间</label>
        <type>Date</type>
    </fields>
    <label>出差申请</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>ServiceRequest__c</columns>
        <columns>NAME</columns>
        <columns>departuredate__c</columns>
        <columns>returntime__c</columns>
        <columns>departure__c</columns>
        <columns>destination__c</columns>
        <columns>Approve__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>X021302_TravelRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>021302-鲁豫区技术负责人</label>
        <queue>X021302</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0213_TravelRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>0213-北京技术主管</label>
        <queue>X0213</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0214_TravelRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>0214-上海技术主管</label>
        <queue>X0214</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0215_TravelRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>0215-广州技术主管</label>
        <queue>X0215</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0218_TravelRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>0218-西南技术主管</label>
        <queue>X0218</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X021_TravelRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>021-技术服务部经理</label>
        <queue>X021</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>出差申请名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>出差申请</pluralLabel>
    <recordTypes>
        <fullName>jishuchuchai</fullName>
        <active>true</active>
        <label>技术服务出差</label>
    </recordTypes>
    <recordTypes>
        <fullName>yewuchuchai</fullName>
        <active>true</active>
        <label>业务机会出差</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>